--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Rate My Realtor USA</title>
+    <link rel="icon" type="image/x-icon" href="/path/to/favicon.ico" />
+    <link
+      rel="apple-touch-icon-precomposed"
+      href="/path/to/house-152-237998.png"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
